# kita

./: CMakeLists.txt  README.md  declaration_types.txt  kita_type.h  main.cpp  parser.cpp  parser.h  static_names.txt  token.cpp  token.h  tokenizer.cpp  tokenizer.h
compiler/: CMakeLists.txt  bytecode.h  dump.cpp  dump.h  main.cpp  parser.cpp  parser.h  token.cpp  token.h  tokenizer.cpp
compiler/expr/: expr_base.h  expr_binary.h  expr_func.h  expr_group.h  expr_inlineif.h  expr_invoke.h  expr_token.h  expr_type.h
config/: expr_parse  static_names.txt
imagine/: hi.kita  instructions  recursive_parser_design
kita/: CMakeLists.txt  bytecode.h  main.cpp
kita/compiler/: bytecode.h  dump.cpp  dump.h  kita_type.h  parser.cpp  parser.h  tokenizer.cpp  tokenizer.h
kita/compiler/expr/: expr_base.h  expr_binary.h  expr_class.h  expr_func.h  expr_group.h  expr_if.h  expr_inlineif.h  expr_invoke.h  expr_let.h  expr_name.h  expr_return.h  expr_token.h  expr_type.h  expr_unary.h
kita/expr/: expr_base.h  expr_binary.h  expr_invoke.h  expr_token.h  expr_type.h
kita/runtime/: address.h  address_mapping.cpp  address_mapping.h  func.cpp  func.h  func_obj.cpp  func_obj.h  memory_manager.cpp  memory_manager.h  name_resolver.cpp  name_resolver.h  runtime.cpp  runtime.h  stack_frame.cpp  stack_frame.h  stack_manager.cpp  stack_manager.h  stack_type.h  visitable.h
kita/runtime/structs/: binary_value.h  visitable.h
playground/: hi.kita
